[project]
name = "deep-podcast-system"
version = "0.1.0"
description = "A multi-agent system for generating in-depth research reports and converting them into podcast content with TTS."
authors = [
    { name = "Deep Podcast Team", email = "team@deeppodcast.ai" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.6.0,<0.7.0",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-community>=0.2.14",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
    # Web scraping and search
    "duckduckgo-search>=5.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # TTS and Audio processing
    "requests>=2.31.0",  # For Qwen TTS API calls
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    # File handling
    "pathlib>=1.0.1",
    "aiofiles>=23.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deep_podcast", "deep_research", "podcast", "shared"]
[tool.setuptools.package-dir]
"deep_podcast" = "src/deep_podcast"
"deep_research" = "src/deep_research"
"podcast" = "src/podcast"
"shared" = "src/shared"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.11.1",
    "ruff>=0.6.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

